# ijepa

./: .gitignore  README.md  justfile  launch.py  main.py  modeling.py  newt.py  pyproject.toml  schedulers.py  train.py
docs/: launch.html  main.html  modeling.html  newt.html  schedulers.html  train.html
