[project]
name = "vision-pretraining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beartype>=0.19.0",
    "einops>=0.8.0",
    "jaxtyping>=0.2.34",
    "polars>=1.12.0",
    "scikit-learn>=1.5.2",
    "submitit>=1.5.2",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "tyro>=0.8.14",
    "wandb>=0.18.5",
    "webdataset>=0.2.100",
]

[tool.ruff.lint]
ignore = ["F722"]

[tool.uv]
dev-dependencies = [
    "matplotlib>=3.9.2",
    "pdoc3>=0.11.1",
    "pytest>=8.3.3",
]
